syntax = "proto3";

package dev.v1;

option go_package = "github.com/MyyPo/w34.Go/gen/go/dev/v1;devpb";

message NewProjectRequest {
    string name = 1;
    bool public = 2;  
}
message NewProjectResponse {
    
}

message DeleteProjectRequest {
    string name = 1;
}
message DeleteProjectResponse {

}

message NewLocationRequest {
    string project_name = 1;
    string location_name = 2;
}
message NewLocationResponse {
}

message NewSceneRequest {
    string project = 1;
    string location = 2;
    map<string, string> options = 3;
}
message NewSceneResponse {
    int32 scene_id = 1;
}

message DeleteSceneRequest {
    string project = 1;
    string location = 2;
    int32 scene_id = 3;
}
message DeleteSceneResponse {
}

message GetLocationScenesRequest {
    string project = 1;
    string location = 2;
}

message GetLocationScenesResponse {
    repeated Scene scene = 1; 
}
message Scene {
    string options = 1;
}
